Improvements Validations/Styles/Icons

--- a/config/locales/fat_free_crm.ja.yml
+++ b/config/locales/fat_free_crm.ja.yml
@@ -647,7 +647,7 @@ ja:
   about_features: 機能とバグ
   about_ffc: Fat Free CRMについて
   about_ffc_resources: Fat Free CRMリソース
-  about_ffc_version: Fat Free CRM バージョン
+  about_ffc_version: Line 5 CRM バージョン
   about_home_page: ホームページ
   about_project_page: プロジェクトページ
   about_thank_you: |
