UI Improvements and Adding Documents

--- a/config/locales/fat_free_crm.pt-BR.yml
+++ b/config/locales/fat_free_crm.pt-BR.yml
@@ -439,6 +439,7 @@ pt-BR:
   leads_small: leads
   none: Nenhum
   rating: Rating
+  dealer_type: Tipo de Revendedor
   reject: Rejeitar
   reject_lead_confirm: Tem certeza que deseja rejeitar este lead?
   save_lead: Salvar lead
