--- a/config/locales/fat_free_crm.en-GB.yml
+++ b/config/locales/fat_free_crm.en-GB.yml
@@ -602,7 +602,7 @@ en-GB:
   back: Back
   cancel: Cancel
   close_form: Close form
-  comment_intro: You can add comments later.
+  comment_intro: You can add notes later.
   confirm_delete: Are you sure you want to delete this %{value}?
   copy_permissions: Copy %{value} permissions
   could_not_find: Couldn't find any %{value}. Feel free to
@@ -674,15 +674,15 @@ en-GB:
 
   # Views -> Comments.
   #----------------------------------------------------------------------------
-  comment: Comment
-  edit_comment: Editing comment
+  comment: Notes
+  edit_comment: Editing note
   show: Show
   update: Update
   following_users_will_be_notified: The following users will be notified by email
-  notifications_tooltip: Subscribers will receive new comments via email
+  notifications_tooltip: Subscribers will receive new notes via email
   subscribe_via_email: Subscribe via email
   disable_email_subscriptions: Disable email subscription
-  added_note: added comment %{value}
+  added_note: added note %{value}
 
   # Views -> Emails.
   #----------------------------------------------------------------------------
