--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -133,6 +133,8 @@ en-US:
               missing_first_name: ^Please specify first name.
             last_name:
               missing_last_name: ^Please specify last name.
+            company:
+              missing_company: ^Please specify the company.
             access:
               share_lead: ^Please specify users with whom to share the lead.
         opportunity:
@@ -192,6 +194,7 @@ en-US:
   msg_asset_not_available: This %{value} is no longer available.
   msg_not_authorized: You are not authorized to take this action.
   msg_assets_not_available: The %{value} are not available.
+  msg_document_error_upload: The document was not uploaded.
   msg_asset_rejected: ! '%{value} has been rejected.'
   msg_bad_image_file: ^Could't upload or resize the image file you specified.
   msg_cant_create_related: Can't create the %{asset} since the %{related} is no longer
@@ -452,6 +455,7 @@ en-US:
     or shared with the specified users. You can change lead permissions later.
   lead_small: lead
   lead_status_small: lead status
+  lead_documents_small: lead documents
   lead_summary: Lead Summary
   lead_statuses: Lead Statuses
   leads: Leads
@@ -459,11 +463,13 @@ en-US:
   leads_small: leads
   none: None
   rating: Rating
+  dealer_type: Dealer Type
   reject: Reject
   reject_lead_confirm: Are you sure you want to reject this lead?
   save_lead: Save Lead
   source: Source
   status: Status
+  documents: Documents
   total_leads: Total Leads
   show_status_info_small: Show status information for this lead.
   show_contact_info_small: Show contact information for this lead.
@@ -602,7 +608,7 @@ en-US:
   back: Back
   cancel: Cancel
   close_form: Close form
-  comment_intro: You can add comments later.
+  comment_intro: You can add notes later.
   confirm_delete: Are you sure you want to delete this %{value}?
   copy_permissions: Copy %{value} permissions
   could_not_find: Couldn't find any %{value}. Feel free to
@@ -674,15 +680,15 @@ en-US:
 
   # Views -> Comments.
   #----------------------------------------------------------------------------
-  comment: Comment
-  edit_comment: Editing comment
+  comment: Notes
+  edit_comment: Editing note
   show: Show
   update: Update
   following_users_will_be_notified: The following users will be notified by email
-  notifications_tooltip: Subscribers will receive new comments via email
+  notifications_tooltip: Subscribers will receive new notes via email
   subscribe_via_email: Subscribe via email
   disable_email_subscriptions: Disable email subscription
-  added_note: added comment %{value}
+  added_note: added note %{value}
 
   # Views -> Emails.
   #----------------------------------------------------------------------------
