LE-1376-crm-phase-2, new changes to add multiple contacts on a lead

--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -269,6 +269,7 @@ en-US:
   avatar: Avatar
   change_password: Change Password
   company: Company
+  company_address: Company Address
   contact_info: Contact Information
   current_password: Current password
   edit_profile: Edit Profile
