new feedback from cto

--- a/config/locales/fat_free_crm.en-GB.yml
+++ b/config/locales/fat_free_crm.en-GB.yml
@@ -417,7 +417,7 @@ en-GB:
   save_contact: Save Contact
   twitter: Twitter
   unassigned: Unassigned
-  web_presence: Web Presence
+  web_presence: Website / Social Media
   web_presence_small: web presence
   works_at: ! '%{job_title} at %{company}'
   general_info: General Information
