adding more info on contacts as cto wants

--- a/config/locales/fat_free_crm.en-US.yml
+++ b/config/locales/fat_free_crm.en-US.yml
@@ -401,7 +401,7 @@ en-US:
   blog: Website/Blog
   contact: Contact
   contact_small: contact
-  contacts: Contacts
+  contacts: Contact Information / Contacts
   contacts_options: Contacts Options
   contacts_small: contacts
   contact_summary: Contact Summary
